# rs-shortener

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-cloudflared.yml  docker-compose.yml
migrations/: 20240620203848_urls.sql
src/: app.rs  main.rs
