[package]
name = "rs-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["tokio"] }
axum-server = "0.6.0"
serde_json = "1.0.117"
sqlx = "0.7.4"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.203", features = ["derive"] }
axum-macros = "0.4.1"
